--- a/honeyqa/app/src/main/res/values/styles.xml
+++ b/honeyqa/app/src/main/res/values/styles.xml
@@ -2,7 +2,12 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="android:textViewStyle">@style/AppTheme.Widget.TextView</item>
+        <item name="colorPrimary">#FFC107</item>
+        <item name="colorPrimaryDark">#FFA000</item>
     </style>
 
+    <style name="AppTheme.Widget.TextView" parent="android:Widget.TextView">
+        <item name="fontPath">fonts/NanumBarunGothicUltraLight.ttf</item>
+    </style>
 </resources>
